<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_login_edit"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingEnd="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/tv_title_zijian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/useRegister_checkAfter_title_zijian"
        android:textColor="@color/color_home_list_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_useRecords_goodsInfo_divider" />

    <RelativeLayout
        android:id="@+id/layout_xiaoguo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv_lab_xiaoguo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:alpha="0.8"
            android:text="@string/useRegister_checkAfter_lab_zijian_xiaoguo"
            android:textColor="@color/color_home_username"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_more_xiaoguo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/icon_more" />

        <TextView
            android:id="@+id/tv_xiaoguo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:alpha="0.5"
            android:text="良好"
            android:textColor="@color/color_home_username"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_lab_xiaoguo"
            android:layout_marginTop="3dp"
            android:background="@color/color_useRecords_goodsInfo_divider" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_mangpao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv_lab_mangpao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:alpha="0.8"
            android:text="@string/useRegister_checkAfter_lab_zijian_mangpao"
            android:textColor="@color/color_home_username"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_more_mangpao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/icon_more" />

        <TextView
            android:id="@+id/tv_mangpao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:alpha="0.5"
            android:text="无"
            android:textColor="@color/color_home_username"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_lab_mangpao"
            android:layout_marginTop="3dp"
            android:background="@color/color_useRecords_goodsInfo_divider" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_wending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv_lab_wending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:alpha="0.8"
            android:text="@string/useRegister_checkAfter_lab_zijian_wending"
            android:textColor="@color/color_home_username"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_more_wending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/icon_more" />

        <TextView
            android:id="@+id/tv_wending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:alpha="0.5"
            android:text="稳定"
            android:textColor="@color/color_home_username"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_lab_wending"
            android:layout_marginTop="3dp"
            android:background="@color/color_useRecords_goodsInfo_divider" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_zijian"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_suggestion_edit"
        android:gravity="top|start"
        android:hint="@string/useRegister_checkAfter_hint_zijian"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:textColor="#cc333333"
        android:textColorHint="#33333333"
        android:textSize="14sp" />

</LinearLayout>
